feat: ini prisma rust

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,6 +1,8 @@
 [alias]
 build-all = ["build", "--workspace"]
 cli= ["run", "--"]
+prisma= ["run", "--package", "embedded-prisma", "--"]
+generate = ["run", "--package", "embedded-prisma", "--", "generate", "--schema=configurations/prisma/prisma/schema-rs.prisma"]
 scopelint = ["run", "--package", "embedded-scopelint", "--"]
 uniffi-bindgen = ["run", "--package", "embedded-uniffi-bindgen", "--"]
 test-all = ["test", "--workspace"]
