--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ members = [
   "crates/core",
   "crates/keychain",
   "crates/indexer",
+  "crates/prisma",
   "crates/tracing",
+  "tools/embedded-prisma",
   "tools/embedded-scopelint",
   "tools/embedded-uniffi-bindgen"
 ]
@@ -42,7 +44,11 @@ axum = "0.6.18"
 clap = "4.3.12"
 eyre = "0.6.8"
 lightdotso-indexer = { path = "./crates/indexer" }
+lightdotso-prisma= { path = "./crates/prisma" }
 lightdotso-tracing = { path = "./crates/tracing" }
+prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8" }
+prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8" }
+serde = "1.0.171"
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = [
