--- a/configurations/prisma/package.json
+++ b/configurations/prisma/package.json
@@ -27,9 +27,11 @@
     "db:push": "prisma db push",
     "predev": "npm run generate",
     "dev": "tsup --watch",
-    "format": "prisma format",
-    "generate": "prisma generate",
-    "lint": "eslint \"src/**/*.ts\"",
+    "generate": "pnpm run shell:generate && pnpm run prisma:generate",
+    "lint": "eslint .",
+    "prisma:format": "prisma format",
+    "prisma:generate": "prisma generate",
+    "shell:generate": "bash ./generate.sh",
     "studio": "prisma studio"
   },
   "dependencies": {
