--- a/.license-check-and-add-config.json
+++ b/.license-check-and-add-config.json
@@ -7,6 +7,8 @@
     "**/generated.ts",
     "**/plonk_vk.sol",
     "**/Package.swift",
+    "**/schema-rs.prisma",
+    "**/schema.prisma",
     "**/.gitkeep",
     "**/.gitignore",
     "**/.*rc.js",
@@ -40,7 +42,6 @@
     "**/vite-env.d.ts",
     "gradle*",
     "pnpm*",
-    "schema.prisma",
     "*.gradle",
     "*file",
     ".*",
