perf: update prisma-client-rust examples

--- a/crates/indexer/Cargo.toml
+++ b/crates/indexer/Cargo.toml
@@ -9,7 +9,9 @@ homepage.workspace = true
 repository.workspace = true
 
 [dependencies]
+axum = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 eyre = { workspace = true }
 lightdotso-prisma = { workspace = true }
 lightdotso-tracing = { workspace = true }
+prisma-client-rust = { workspace = true }
