--- a/.license-check-and-add-config.json
+++ b/.license-check-and-add-config.json
@@ -7,6 +7,7 @@
     "**/generated.ts",
     "**/plonk_vk.sol",
     "**/Package.swift",
+    "**/prisma/src/lib.rs",
     "**/schema-rs.prisma",
     "**/schema.prisma",
     "**/.gitkeep",
