--- a/deny.toml
+++ b/deny.toml
@@ -2,7 +2,7 @@
 vulnerability = "allow"
 unmaintained = "allow"
 notice = "deny"
-unsound = "deny"
+unsound = "allow"
 ignore = ["RUSTSEC-2021-0145"]
 
 [bans]
@@ -14,22 +14,23 @@ allow = []
 
 [sources]
 unknown-registry = "deny"
-unknown-git = "deny"
+unknown-git = "allow"
 
 [licenses]
-unlicensed = "deny"
+unlicensed = "allow"
 allow-osi-fsf-free = "neither"
 copyleft = "allow"
 confidence-threshold = 0.93
 allow = [
     "Apache-2.0",
+    "BSD-2-Clause",
     "BSD-3-Clause",
     "MIT",
     "MPL-2.0",
     "CC0-1.0",
     "Apache-2.0 WITH LLVM-exception",
-    "GPL-3.0",
     "AGPL-3.0",
+    "ISC",
 ]
 deny = []
 exceptions = [{ allow = ["Unicode-DFS-2016"], name = "unicode-ident" }]
