--- a/turbo.json
+++ b/turbo.json
@@ -38,7 +38,7 @@
       ]
     },
     "//#prisma": {
-      "env": ["CI", "DOCKER"],
+      "env": ["CI", "DOCKER", "RUNNER_OS"],
       "dependsOn": [],
       "outputs": ["crates/prisma/src/lib.rs"],
       "inputs": ["configurations/prisma/prisma/schema.prisma"]
