--- a/configurations/prisma/package.json
+++ b/configurations/prisma/package.json
@@ -20,7 +20,7 @@
   ],
   "scripts": {
     "prebuild": "npm run generate",
-    "build": "tsup",
+    "build": "pnpm run generate && tsup",
     "clean": "rimraf .turbo node_modules dist",
     "db:migrate:deploy": "prisma migrate deploy",
     "db:migrate:dev": "prisma migrate dev",
