perf: upgrade turbo

--- a/android/turbo.json
+++ b/android/turbo.json
@@ -3,7 +3,6 @@
   "extends": ["//"],
   "pipeline": {
     "build": {
-      "cache": false,
       "dependsOn": ["^build"],
       "inputs": [
         "../gradle/**",
@@ -16,7 +15,8 @@
         "./build.gradle",
         "./proguard-rules.pro",
         "src/**"
-      ]
+      ],
+      "outputs": []
     }
   }
 }
