--- a/bin/turbo.json
+++ b/bin/turbo.json
@@ -3,9 +3,9 @@
   "extends": ["//"],
   "pipeline": {
     "build": {
-      "cache": false,
       "dependsOn": ["^build"],
-      "inputs": ["**", "../.dockerignore", "../Dockerfile"]
+      "inputs": ["**", "../.dockerignore", "../Dockerfile"],
+      "outputs": []
     }
   }
 }
