--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,16 +3,20 @@
     "plugins": [
       {
         "name": "@evmts/ts-plugin",
-        "deployments": [
-          {
-            "name": "LightWallet",
-            "addresses": {
-              "31337": "0x5fbdb2315678afecb367f032d93f642f64180aa3"
+        "compiler": {
+          "foundryProject": true,
+          "solcVersion": "0.8.18"
+        },
+        "localContracts": {
+          "deployments": [
+            {
+              "name": "LightWallet",
+              "addresses": {
+                "31337": "0x5fbdb2315678afecb367f032d93f642f64180aa3"
+              }
             }
-          }
-        ],
-        "forge": true,
-        "solcVersion": "0.8.18"
+          ]
+        }
       }
     ],
     "paths": {
