--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -20,11 +20,14 @@
   },
   "dependencies": {
     "next": "^13.4.10",
+    "nextra": "^2.10.0",
+    "nextra-theme-docs": "^2.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@lightdotso/eslint-config": "workspace:*",
+    "@lightdotso/styles": "workspace:*",
     "@lightdotso/tailwindcss": "workspace:*",
     "@lightdotso/tsconfig": "workspace:*",
     "@types/node": "^20.4.2",
