--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -93,5 +93,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: docker-build
+          allowed-skips: docker-build,docker-lint
           jobs: ${{ toJSON(needs) }}
