--- a/.license-check-and-add-config.json
+++ b/.license-check-and-add-config.json
@@ -92,7 +92,7 @@
     "append": ""
   },
   "licenseFormats": {
-    "js|ts|tsx|rs|sol|swift|kt|nr|udl": {
+    "js|cjs|mjs|ts|tsx|rs|sol|swift|kt|nr|udl": {
       "eachLine": {
         "prepend": "// "
       },
