--- a/.license-check-and-add-config.json
+++ b/.license-check-and-add-config.json
@@ -99,8 +99,10 @@
       "append": ""
     },
     "mdx": {
-      "prepend": "{/*",
-      "append": "*/}\n"
+      "eachLine": {
+        "prepend": "{/*",
+        "append": "*/}"
+      }
     },
     "sh": {
       "eachLine": {
