--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -27,6 +27,19 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           wait-interval: 10
           allowed-conclusions: success
+  fly-deploy-grafana:
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+      - name: Fetch Head
+        uses: actions/checkout@v3
+      - name: Fly Install
+        uses: superfly/flyctl-actions/setup-flyctl@master
+      - name: Fly Deploy
+        run: flyctl deploy --remote-only
+        working-directory: ./fly/grafana
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   fly-deploy-serve:
     runs-on: ubuntu-latest
     needs:
@@ -61,7 +74,9 @@ jobs:
     if: always()
     needs:
       - fly-wait-docker
+      - fly-deploy-grafana
       - fly-deploy-serve
+      - fly-deploy-indexer
     runs-on: ubuntu-latest
     timeout-minutes: 3
     steps:
