--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -38,6 +38,7 @@ jobs:
       - name: Fly Deploy
         run: flyctl deploy --remote-only
         working-directory: ./fly/grafana
+        continue-on-error: true
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   fly-deploy-serve:
