--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -29,6 +29,8 @@ jobs:
           allowed-conclusions: success
   fly-deploy-grafana:
     runs-on: ubuntu-latest
+    needs:
+      - fly-wait-docker
     timeout-minutes: 30
     steps:
       - name: Fetch Head
