--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@vitest/coverage-v8": "^0.33.0",
     "@vitest/ui": "^0.33.0",
     "@wagmi/cli": "^1.3.0",
+    "abitype": "^0.9.2",
     "autoprefixer": "^10.4.14",
     "chai": "^4.3.7",
     "commitlint": "^17.6.6",
