--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "wagmi:generate": "wagmi generate"
   },
   "dependencies": {
-    "solidity-docgen": "0.6.0-beta.35"
+    "solc": "0.8.18"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
@@ -122,6 +122,7 @@
     "release-it": "^16.1.2",
     "rimraf": "^5.0.1",
     "solhint": "^3.4.1",
+    "solidity-docgen": "0.6.0-beta.35",
     "sort-package-json": "^2.5.1",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
