--- a/.github/workflows/prisma.yml
+++ b/.github/workflows/prisma.yml
@@ -36,12 +36,12 @@ jobs:
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
-      - name: Rust Install
-        uses: wallet-rs/wallet-rs/.github/actions/rust-install@main
+      - name: Install Rust Toolchain (nightly)
+        uses: actions-rs/toolchain@v1
         with:
-          sccache_endpoint: ${{ secrets.SCCACHE_ENDPOINT }}
-          sccache_key_id: ${{ secrets.SCCACHE_KEY_ID }}
-          sccache_secret: ${{ secrets.SCCACHE_SECRET }}
+          profile: minimal
+          toolchain: nightly
+          override: true
       - name: Node Install
         uses: wallet-rs/wallet-rs/.github/actions/node-install@main
       - name: Make Prisma
