--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "wagmi:generate": "wagmi generate"
   },
   "dependencies": {
-    "solidity-docgen": "0.6.0-beta.35"
+    "solc": "0.8.18"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
@@ -85,6 +85,7 @@
     "@vitest/coverage-v8": "^0.33.0",
     "@vitest/ui": "^0.33.0",
     "@wagmi/cli": "^1.3.0",
+    "abitype": "^0.9.2",
     "autoprefixer": "^10.4.14",
     "chai": "^4.3.7",
     "commitlint": "^17.6.6",
@@ -121,6 +122,7 @@
     "release-it": "^16.1.2",
     "rimraf": "^5.0.1",
     "solhint": "^3.4.1",
+    "solidity-docgen": "0.6.0-beta.35",
     "sort-package-json": "^2.5.1",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
