--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -188,6 +188,7 @@ jobs:
           target: contracts/src/
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v2
+        continue-on-error: true
         with:
           sarif_file: ${{ steps.slither.outputs.sarif }}
   contracts-check:
