--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -64,6 +64,7 @@ jobs:
           output-file: kube-linter.sarif
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v2
+        continue-on-error: true
         with:
           sarif_file: kube-linter.sarif
   k8s-check:
