chore: upgrade pnpm (#204)
* chore: upgrade pnpm

* chore: upgrade docker pnpm

* chore: update

* chore: update

--- a/.github/workflows/prisma.yml
+++ b/.github/workflows/prisma.yml
@@ -30,9 +30,6 @@ jobs:
     needs:
       - prisma-turbo
     timeout-minutes: 90
-    env:
-      SCCACHE_GHA_ENABLED: "true"
-      RUSTC_WRAPPER: "sccache"
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
@@ -51,7 +48,7 @@ jobs:
         run: |
           git diff --quiet
       - if: failure()
-        name: Show Storage Changes
+        name: Show Prisma Changes
         run: |
           git diff
   prisma-check:
