feat: ini calculate image hash

--- a/.license-check-and-add-config.json
+++ b/.license-check-and-add-config.json
@@ -83,7 +83,8 @@
     "**/pods/**",
     "**/scripts/**",
     "**/target/**",
-    "**/tools/**"
+    "**/tools/**",
+    "**/wiki/**"
   ],
   "license": "LICENSE.header",
   "defaultFormat": {
