--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -134,7 +134,7 @@ jobs:
           fail_ci_if_error: false
           files: lcov.info
           flags: contracts
-  contracts-nargo:
+  contracts-noir:
     if: needs.contracts-turbo.outputs.trigger == 'true'
     needs:
       - contracts-turbo
@@ -197,7 +197,7 @@ jobs:
       - contracts-lint
       - contracts-storage
       - contracts-test
-      - contracts-nargo
+      - contracts-noir
       - contracts-slither
     runs-on: ubuntu-latest
     timeout-minutes: 3
@@ -205,5 +205,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: contracts-build,contracts-lint,contracts-storage,contracts-test,contracts-nargo,contracts-slither
+          allowed-skips: contracts-build,contracts-lint,contracts-storage,contracts-test,contracts-noir,contracts-slither
           jobs: ${{ toJSON(needs) }}
