--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,19 +28,22 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: ubuntu-latest-large
+          - name: Workspace
+            os: ubuntu-latest-large
             target: x86_64-unknown-linux-gnu
             package: --workspace
             clippy: true
             deny: true
             test: true
-          - os: ubuntu-latest
+          - name: Android
+            os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             package: --package lightwallet-core
             clippy: false
             deny: false
             test: false
-          - os: macos-latest
+          - name: iOS
+            os: macos-latest
             target: x86_64-apple-darwin
             package: --package lightwallet-core
             clippy: false
