--- a/foundry.toml
+++ b/foundry.toml
@@ -1,40 +1,39 @@
 [profile.default]
-  libs = [
-    "lib/account-abstraction",
-    "lib/ds-test",
-    "lib/forge-std",
-    # "lib/kernel",
-    "lib/openzeppelin-contracts",
-    "lib/openzeppelin-contracts-upgradeable",
-    "lib/safe-contracts",
-    "lib/solady",
-    "lib/solmate",
-    # "lib/soul-wallet-contract",
-    "lib/v3-periphery",
-  ]
-  auto_detect_remappings = false
-  optimizer = true
-  optimizer_runs = 10_000
-  solc = "0.8.18"
-  evm_version = "london"
-  src = "contracts/src"
-  test = "contracts/test"
-  verbosity = 3
-  via_ir = false
+libs = [
+  "lib/account-abstraction",
+  "lib/ds-test",
+  "lib/forge-std",
+  # "lib/kernel",
+  "lib/openzeppelin-contracts",
+  "lib/openzeppelin-contracts-upgradeable",
+  "lib/safe-contracts",
+  "lib/solady",
+  "lib/solmate",
+  # "lib/soul-wallet-contract",
+  "lib/v3-periphery",
+]
+auto_detect_remappings = false
+optimizer = true
+optimizer_runs = 10_000
+gas_reports = ["LightWallet", "LightWalletFactory"]
+solc = "0.8.18"
+evm_version = "london"
+src = "contracts/src"
+test = "contracts/test"
+verbosity = 3
+via_ir = false
 
 [profile.local]
-  no_match_test = "testForkRun"
+no_match_test = "testForkRun"
 
 [profile.noir]
-  test = "contracts/circuits/test"
-  fs_permissions = [
-    { access = "read", path = "contracts/circuits/proofs"}
-  ]
+test = "contracts/circuits/test"
+fs_permissions = [{ access = "read", path = "contracts/circuits/proofs" }]
 
 [profile.ci]
-  fuzz = { runs = 5000 }
-  invariant = { runs = 1000 }
-  verbosity = 2
+fuzz = { runs = 5000 }
+invariant = { runs = 1000 }
+verbosity = 2
 
 [rpc_endpoints]
 mainnet = "${ETH_RPC_MAINNET}"
