--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -123,7 +123,7 @@ jobs:
           forge test
       - name: Check Gas Snapshots
         run: |
-          forge snapshot --check
+          pnpm run forge:snapshot --check
       - name: Run Coverage
         run: |
           forge coverage --report lcov
