--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "eslint:lint": "eslint --config .eslintrc.js --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "fix": "concurrently \"pnpm:*:fix\"",
     "forge:fmt:cmd": "forge fmt",
-    "forge:snapshot": "forge snapshot --nmt \"test(Fork)?(Fuzz)\"",
-    "forge:snapshot:cmd": "forge snapshot --nmt \"test(Fork)?(Fuzz)\" && echo",
+    "forge:snapshot": "make contracts-snapshot",
+    "forge:snapshot:cmd": "make contracts-snapshot && echo",
     "hardhat:compile": "hardhat compile",
     "hardhat:compile:coverage": "hardhat compile-for-coverage",
     "hardhat:docgen": "hardhat docgen",
