--- a/.license-check-and-add-config.json
+++ b/.license-check-and-add-config.json
@@ -34,6 +34,7 @@
     "**/*.plist",
     "**/*.resolved",
     "**/*.svg",
+    "**/*.tree",
     "**/*.xcscheme",
     "**/*.xcsettings",
     "**/*.xcuserstate",
@@ -53,7 +54,6 @@
     "*.kdl",
     "*.md",
     "*.toml",
-    "*.tree",
     "*.txt",
     "*.yml",
     "apps/extension/**/*.js",
