refactor: tests dir (#212)
* refactor: tests dir

* chore: remove reference tests and augment overrides

* chore: update

* chore: update compatibility tests

* chore: ini unit tests

* chore: update

* chore: update

* chore: ini 1271 interface

* chore: update base tests

* chore: ini base abstractions

* chore: update

* chore: update

* chore: ini changesets

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* refactor: fuzz update test (#213)

* refactor: fuzz update test

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -123,7 +123,7 @@ jobs:
           forge test
       - name: Check Gas Snapshots
         run: |
-          forge snapshot --check
+          make contracts-snapshot-check
       - name: Run Coverage
         run: |
           forge coverage --report lcov
