--- a/package.json
+++ b/package.json
@@ -13,25 +13,26 @@
   "license": "AGPL-3.0-or-later",
   "author": "Light, Inc.",
   "scripts": {
-    "build:test": "concurrently 'pnpm:*:compile'",
+    "build:test": "concurrently \"pnpm:*:compile\"",
     "build:turbo": "turbo run build",
     "changeset": "changeset",
     "eslint:cmd": "eslint --config .eslintrc.js --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint",
     "eslint:fix": "eslint --config .eslintrc.js --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint . --fix",
     "eslint:lint": "eslint --config .eslintrc.js --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "fix": "concurrently 'pnpm:*:fix'",
+    "fix": "concurrently \"pnpm:*:fix\"",
     "forge:fmt:cmd": "forge fmt",
-    "forge:snapshot:cmd": "forge snapshot && echo",
+    "forge:snapshot": "make contracts-snapshot",
+    "forge:snapshot:cmd": "make contracts-snapshot && echo",
     "hardhat:compile": "hardhat compile",
     "hardhat:compile:coverage": "hardhat compile-for-coverage",
     "hardhat:docgen": "hardhat docgen",
     "license:cmd": "license-check-and-add -f .license-check-and-add-config.json",
     "license:fix": "license-check-and-add -f .license-check-and-add-config.json add",
     "license:lint": "license-check-and-add -f .license-check-and-add-config.json check",
-    "lint": "concurrently 'pnpm:*:lint'",
+    "lint": "concurrently \"pnpm:*:lint\"",
     "lint:turbo": "turbo run lint",
     "npm-package-json:lint": "npmPkgJsonLint ./apps ./android ./configuations ./contracts ./crates ./ios ./packages ./pods",
-    "pnpm:upgrade": "pnpm update --latest --recursive '!solc'",
+    "pnpm:upgrade": "pnpm update --latest --recursive \"!solc\"",
     "prepare": "husky install",
     "prettier:cmd": "prettier",
     "prettier:fix": "prettier --write .",
@@ -39,10 +40,10 @@
     "prisma": "make prisma",
     "prisma:turbo": "turbo run prisma",
     "release": "changeset publish",
-    "solhint:cmd": "solhint 'contracts/**/*.sol'",
-    "solhint:fix": "solhint 'contracts/**/*.sol' --fix",
-    "solhint:lint": "solhint 'contracts/**/*.sol'",
-    "sort-package-json:fix": "sort-package-json '{apps,configurations,contracts,crates,fastlane,ios,packages,pods}/**/package.json'",
+    "solhint:cmd": "solhint \"contracts/**/*.sol\"",
+    "solhint:fix": "solhint \"contracts/**/*.sol\" --fix",
+    "solhint:lint": "solhint \"contracts/**/*.sol\"",
+    "sort-package-json:fix": "sort-package-json \"{apps,configurations,contracts,crates,fastlane,ios,packages,pods}/**/package.json\"",
     "test": "vitest",
     "test:compile": "turbo run build --filter=contracts --filter=solutions",
     "test:coverage": "vitest --coverage --single-thread",
