--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lightdotso-bin"
-description = "A bin library for wallet-rs"
+description = "A bin library for lightdotso"
 version = "0.1.0"
 
 edition.workspace = true
@@ -18,6 +18,7 @@ eyre = { workspace = true }
 clap = { workspace = true }
 lightdotso-indexer = { workspace = true }
 lightdotso-tracing = { workspace = true }
+ratatui = { version = "0.22.0", features = ["all-widgets"] }
 tokio = { workspace = true }
 
 [build-dependencies]
