--- a/slither.config.json
+++ b/slither.config.json
@@ -1,5 +1,5 @@
 {
-  "exclude_informational": true,
+  "exclude_informational": false,
   "exclude_low": false,
   "exclude_medium": false,
   "exclude_high": false,
