--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -58,7 +58,7 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: false
           files: coverage/lcov.info
-          flags: node
+          flags: js
   node-check:
     if: always()
     needs:
