--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,7 +29,7 @@ jobs:
       matrix:
         include:
           - name: Workspace
-            os: ubuntu-latest-large
+            os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             package: --workspace
             clippy: true
