--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -43,6 +43,21 @@ jobs:
         continue-on-error: true
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+  fly-deploy-rpc:
+    runs-on: ubuntu-latest
+    needs:
+      - fly-wait-docker
+    timeout-minutes: 30
+    steps:
+      - name: Fetch Head
+        uses: actions/checkout@v3
+      - name: Fly Install
+        uses: superfly/flyctl-actions/setup-flyctl@master
+      - name: Fly Deploy
+        run: flyctl deploy --remote-only
+        working-directory: ./fly/rpc
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   fly-deploy-serve:
     runs-on: ubuntu-latest
     needs:
@@ -78,6 +93,7 @@ jobs:
     needs:
       - fly-wait-docker
       - fly-deploy-grafana
+      - fly-deploy-rpc
       - fly-deploy-serve
       - fly-deploy-indexer
     runs-on: ubuntu-latest
@@ -86,5 +102,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: fly-wait-docker,fly-deploy-grafana,fly-deploy-serve,fly-deploy-indexer
+          allowed-skips: fly-wait-docker,fly-deploy-grafana,fly-deploy-rpc,fly-deploy-serve,fly-deploy-indexer
           jobs: ${{ toJSON(needs) }}
