--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "solhint:fix": "solhint \"contracts/**/*.sol\" --fix",
     "solhint:lint": "solhint \"contracts/**/*.sol\"",
     "sort-package-json:fix": "sort-package-json \"{apps,configurations,contracts,crates,fastlane,ios,packages,pods}/**/package.json\"",
+    "taplo:cmd": "taplo format Cargo.toml crates/**/Cargo.toml fly/**/fly.toml",
+    "taplo:fix": "taplo format Cargo.toml crates/**/Cargo.toml fly/**/fly.toml",
+    "taplo:lint": "taplo lint Cargo.toml crates/**/Cargo.toml fly/**/fly.toml",
     "test": "vitest",
     "test:compile": "turbo run build --filter=contracts --filter=solutions",
     "test:coverage": "vitest --coverage --single-thread",
@@ -75,6 +78,7 @@
     "@openzeppelin/contracts": "^4.9.2",
     "@release-it/keep-a-changelog": "^4.0.0",
     "@swc/core": "^1.3.70",
+    "@taplo/cli": "^0.5.2",
     "@types/dotenv": "^8.2.0",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.4",
