--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "solhint:fix": "solhint \"contracts/**/*.sol\" --fix",
     "solhint:lint": "solhint \"contracts/**/*.sol\"",
     "sort-package-json:fix": "sort-package-json \"{apps,configurations,contracts,crates,fastlane,ios,packages,pods}/**/package.json\"",
-    "taplo:cmd": "taplo format Cargo.toml crates/**/Cargo.toml fly/**/fly.toml",
-    "taplo:fix": "taplo format Cargo.toml crates/**/Cargo.toml fly/**/fly.toml",
-    "taplo:lint": "taplo lint Cargo.toml crates/**/Cargo.toml fly/**/fly.toml",
+    "taplo:cmd": "taplo format *.toml crates/**/Cargo.toml fly/**/fly.toml",
+    "taplo:fix": "taplo format *.toml crates/**/Cargo.toml fly/**/fly.toml",
+    "taplo:lint": "taplo lint *.toml crates/**/Cargo.toml fly/**/fly.toml",
     "test": "vitest",
     "test:compile": "turbo run build --filter=contracts --filter=solutions",
     "test:coverage": "vitest --coverage --single-thread",
