--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,6 +1,6 @@
 [toolchain]
-channel = "nightly"
-targets = [
+  channel = "nightly"
+  targets = [
     "aarch64-linux-android",
     "armv7-linux-androideabi",
     "i686-linux-android",
@@ -9,7 +9,7 @@ targets = [
     "x86_64-apple-ios",
     "aarch64-apple-ios-sim",
     "aarch64-apple-darwin",
-    "x86_64-apple-darwin"
-]
-profile = "default"
-components = ["clippy", "rustfmt", "rust-src"]
+    "x86_64-apple-darwin",
+  ]
+  profile = "default"
+  components = ["clippy", "rustfmt", "rust-src"]
