--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,60 +1,64 @@
 [workspace]
-resolver = "2"
+  resolver = "2"
 
-members = [
-  "bin",
-  "apps/desktop/src-tauri",
-  "crates/core",
-  "crates/keychain",
-  "crates/indexer",
-  "crates/prisma",
-  "crates/tracing",
-  "tools/embedded-prisma",
-  "tools/embedded-scopelint",
-  "tools/embedded-uniffi-bindgen"
-]
+  members = [
+    "apps/desktop/src-tauri",
+    "bin",
+    "crates/core",
+    "crates/indexer",
+    "crates/keychain",
+    "crates/prisma",
+    "crates/rpc",
+    "crates/tracing",
+    "tools/embedded-prisma",
+    "tools/embedded-scopelint",
+    "tools/embedded-uniffi-bindgen",
+  ]
 
-default-members = ["bin"]
+  default-members = ["bin"]
 
-[workspace.package]
-version = "0.1.0"
-edition = "2021"
-rust-version = "1.70"
-license = "AGPL-3.0-or-later"
-homepage = "https://github.com/LightDotSo/LightDotSo"
-repository = "https://github.com/LightDotSo/LightDotSo"
+  [workspace.package]
+    version = "0.1.0"
+    edition = "2021"
+    rust-version = "1.70"
+    license = "AGPL-3.0-or-later"
+    homepage = "https://github.com/LightDotSo/LightDotSo"
+    repository = "https://github.com/LightDotSo/LightDotSo"
 
-# Ref: https://www.uffizzi.com/blog/optimizing-rust-builds-for-faster-github-actions-pipelines
+    # Ref: https://www.uffizzi.com/blog/optimizing-rust-builds-for-faster-github-actions-pipelines
 
 [profile.dev]
-opt-level = 0
-codegen-units = 16
+  opt-level = 0
+  codegen-units = 16
 
 # https://stackoverflow.com/a/54842093
 [profile.release]
-opt-level = 'z'
-lto = true
-codegen-units = 1
-panic = 'abort'
-strip = true
+  opt-level = 'z'
+  lto = true
+  codegen-units = 1
+  panic = 'abort'
+  strip = true
 
 [workspace.dependencies]
-anyhow = "1.0.71"
-axum = "0.6.18"
-clap = "4.3.12"
-eyre = "0.6.8"
-lightdotso-indexer = { path = "./crates/indexer" }
-lightdotso-prisma= { path = "./crates/prisma" }
-lightdotso-tracing = { path = "./crates/tracing" }
-prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8" }
-prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8" }
-serde = "1.0.171"
-tokio = { version = "1", features = ["full"] }
-tracing = "0.1.37"
-tracing-subscriber = { version = "0.3.17", features = [
-  "env-filter",
-  "fmt",
-  "json",
-  "std",
-] }
-uniffi = "0.23.0"
+  anyhow = "1.0.71"
+  axum = "0.6.18"
+  clap = "4.3.12"
+  http = "0.2.8"
+  eyre = "0.6.8"
+  lightdotso-indexer = { path = "./crates/indexer" }
+  lightdotso-prisma = { path = "./crates/prisma" }
+  lightdotso-tracing = { path = "./crates/tracing" }
+  prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8" }
+  prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8" }
+  serde = "1.0.171"
+  tokio = { version = "1", features = ["full"] }
+  tower = { version = "0.4.12" }
+  tower-http = { version = "0.4", features = ["trace"] }
+  tracing = "0.1.37"
+  tracing-subscriber = { version = "0.3.17", features = [
+    "env-filter",
+    "fmt",
+    "json",
+    "std",
+  ] }
+  uniffi = "0.23.0"
