--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,9 +19,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^5.0.0",
+    "@trpc/server": "^10.35.0",
+    "fets": "^0.4.8",
     "next": "^13.4.12",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "superjson": "^1.13.1",
+    "trpc-openapi": "^1.2.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@lightdotso/eslint-config": "workspace:*",
