--- a/.license-check-and-add-config.json
+++ b/.license-check-and-add-config.json
@@ -58,6 +58,7 @@
     "*.yml",
     "apps/extension/**/*.js",
     "apps/docs/src/pages/posts/**/*.mdx",
+    "configurations/prisma/src/zod/**/*.ts",
     "ios/LightWalletSafariExtension/Resources/**/*.js",
     "**/__snapshots__/**",
     "**/*.app/**",
